--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,8 @@
     <string name="template_description_navigation_drawer">Project with AppCompat Toolbar, DrawerLayout and NavigationView</string>
     <string name="template_empty">Empty project</string>
     <string name="template_navigation_drawer">Navigation drawer project</string>
+    <string name="template_kotlin_basic">Kotlin Basic Project</string>
+    <string name="template_description_kotlin_basic">Kotlin project with Appcompat Toolbar and a Floating Action Button</string>
 
     <!-- Files -->
     <string name="save">Save</string>
