--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -11,7 +11,7 @@
     <string name="about_option_email">Émail</string>
     <string name="about_option_website">Site Web</string>
     <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
-    <string name="about_footer">AndroidIDE %1$s for %2$s</string>
+    <string name="about_footer">AndroidIDE %1$s pour %2$s</string>
     <string name="about_subtitle">Simplement, un IDE pour android.</string>
     <string name="msg_get_package_failed">Impossible d\'extraire le nom du package !</string>
     <string name="msg_share_app">AndroidIDE est un Environnement de développement integré (IDE) pour la création d\'application Android sur votre appareil android. Il support :\n1. Gradle \n2. OpenJDK 11.0.1.\n3. Complétation Java automatique \n4. Complétation XML Auto \n5. Support Kotlin et bien plus.\n\nTélecharger AndroidIDE sur https://androidide.com</string>
@@ -71,7 +71,7 @@
     <string name="msg_installable_files">Fichiers qui doit êtres installés\n\n%s</string>
     <string name="title_restart">Veuillez redémarrer l\'application</string>
     <string name="msg_restart">Enfin ! L\'installation s\'est correctement terminé, veuillez redémarrer AndroidIDE.</string>
-    <string name="please_wait">Veuillez patientez un moment &#8230;</string>
+    <string name="please_wait">Veuillez patientez un moment&#8230;</string>
     <string name="title_device_not_supported">Appareil non compatible</string>
     <string name="msg_device_not_supported">Malheureusement, votre appareil n\'est pas supporté pour le moment, nous sommes désolés pour le problème occasionné.\n\nCPU ABIs supportés: aarch64 et armeabi-v7a</string>
 
@@ -94,13 +94,13 @@
     <string name="msg_task_begin">========== [%s] TASK_BEGIN: %s ==========</string>
     <string name="preparing">Préparation</string>
     <string name="preparing_first">Préparation en cours, la première compilation peut prendre de 10&#8211;15 minutes !</string>
-    <string name="msg_gradle_terminated">Résultat de la compilation de Gradle : %1$d</string>
+    <string name="msg_gradle_terminated">Résultat de la compilation : %1$d</string>
     <string name="msg_gradlew_installation_failed">Impossible d\'installer Gradle Wrapper: %s</string>
     <string name="msg_installing_gradlew">Gradle Wrapper n\'est pas disponible !\nInstallation de celui par défaut. Gradle v7.3 sera téléchargé si nécessaire.</string>
     <string name="msg_getting_daemom_status">Récupération du status du Daemon, veuillez patienter&#8230;</string>
     <string name="msg_daemons_stopped">Gradle Daemons arrêté</string>
     <string name="gradle_daemon_status">Statut du Daemon Gradle</string>
-    <string name="msg_service_started">Services lancés</string>
+    <string name="msg_service_started">Lancement de la compilation </string>
     <string name="msg_starting_completion">Lancement des services</string>
     <string name="msg_starting_completion_failed">Impossible de lancer le Service des Completation</string>
     <string name="msg_starting_daemon">Lancement d\'un daemon Gradle</string>
@@ -122,13 +122,13 @@
     <string name="project_app_name">Nom de l\'application</string>
     <string name="invalid_values">Champs Invalides</string>
     <string name="msg_no_projects">Mmmmm...Il semblerait que vous n\'ayez créé aucun projet.</string>
-    <string name="msg_create_new_project_greeting">Libérez vos talents de développeur\nCréer un projet et commencer à créer votre propre application</string>
+    <string name="msg_create_new_project_greeting">Libérez vos talents de développeur ! Créer un projet et commencer à créer votre propre application</string>
     <string name="title_confirm_open_project">Ouvrir le dernier projet ouvert ?</string>
-    <string name="msg_confirm_open_project">Voulez-vous ouvrir le dernier projet ouvert ? Dérnier projet ouvert :\n%s</string>
+    <string name="msg_confirm_open_project">Voulez-vous ouvrir le dernier projet ouvert ? dernier projet ouvert :\n%s</string>
     <string name="msg_init_project_failed">Impossible d\'initialiser le projet !</string>
     <string name="group_project">Projet</string>
     <string name="title_close_project">Fermer le projet</string>
-    <string name="msg_opened_project_does_not_exist">Le dérnier projet ouvert n\'exist pas !</string>
+    <string name="msg_opened_project_does_not_exist">Le dernier projet ouvert n\'exist pas !</string>
     <string name="msg_create_new_project">Créer un nouveau projet</string>
     <string name="msg_open_existing_project">Ouvrir un projet existant</string>
     <string name="msg_opening_project">Ouverture du projet&#8230;</string>
@@ -144,7 +144,7 @@
     <string name="msg_min_sdk">Min SDK : %s</string>
     <string name="msg_target_sdk">SDK actuel : %s</string>
     <string name="title_confirm_project_close">Fermer le projet</string>
-    <string name="msg_confirm_project_close">Êtes vous  sûres ? Tous les daemons de gradle seront arrêtés après la fermeture du projet.</string>
+    <string name="msg_confirm_project_close">Êtes vous sûres ? Tous les daemons de gradle seront arrêtés après la fermeture du projet.</string>
     <string name="project_exists">Un projet avec ce nom exist déjà !</string>
 
     <!-- Templates -->
@@ -340,7 +340,7 @@
     <string name="title_code_generation_failed">Code generation failed</string>
     <string name="msg_code_generation_failed">Failed to generate XML code. Would you like to exit anyway?</string>
     <string name="msg_invalid_designer_result">UI Designer returned invalid result</string>
-    <string name="msg_swipe_up">Balayez vers le haut pour le contenue de la console compilation, logs et plus</string>
+    <string name="msg_swipe_up">Balayez vers le haut pour accéder au contenue de la console, des logs et autres.</string>
     <string name="msg_ide_crashed">AndroidIDE a crashé</string>
     <string name="msg_report_crash">Please open an issue on github with the following stacktrace :</string>
     <string name="msg_crash_report_hint">Click on the button below to copy log and open issues page.</string>
