--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
     <string name="template_navigation_drawer">Navigation drawer project</string>
     <string name="template_kotlin_basic">Kotlin Basic Project</string>
     <string name="template_description_kotlin_basic">Kotlin project with Appcompat Toolbar and a Floating Action Button</string>
-
+    
     <!-- Files -->
     <string name="save">Save</string>
     <string name="show_files">Files</string>
@@ -354,5 +354,6 @@
     <string name="msg_compiler_module_install">Compiler module is being installed, please wait&#8230;</string>
     <string name="msg_compiler_module_install_failed">Compiler module installation failed. The error was:\n%s</string>
     <string name="msg_compiler_module_installed">Compiler module installed successfully!</string>
-
+    <string name="action_expand_selection">Expand selection</string>
+    
 </resources>
